test/compilable/imports/pkg11847/mod.d
module pkg11847.mod;
enum sym = 0;
