test/fail_compilation/extra-files/extra11847.d
module extra11847;

import pkg11847;
import pkg11847.mod;
